--- a/package.json
+++ b/package.json
@@ -1,25 +1,44 @@
 {
-  "name": "s-component",
-  "version": "1.0.0",
+  "name": "servisofts-component",
+  "version": "1.10.3",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "jsnext:main": "build/index.es.js",
+  "files": [
+    "build"
+  ],
   "scripts": {
-    "build": "cd ./node_modules/typescript/bin && tsc",
+    "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "first"
+  ],
   "author": "servisofts",
   "license": "ISC",
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-native": "^0.64.2",
-    "react-native-web": "^0.17.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "@types/jest": "^26.0.24",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-native": "^0.64.12",
-    "typescript": "^4.3.5"
+    "@types/react-test-renderer": "^17.0.1",
+    "react-scripts-ts": "^3.1.0",
+    "react-test-renderer": "^17.0.2",
+    "rollup": "^2.55.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.3.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native-web": "^0.14.8"
   }
 }
