--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,40 @@
 {
     "compilerOptions": {
-      "outDir": "./build/",
-      "module": "esnext",
-      "target": "es5",
-      "lib": ["es6", "dom"],
-      "typeRoots" : [
-        "./typings" // path to your typings directory (relative to tsconfig.json)
-      ],
-      "sourceMap": true,
-      "allowJs": true,
-      "jsx": "react",
-      "moduleResolution": "node",
-      "forceConsistentCasingInFileNames": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": false,
-      "noImplicitAny": false,
-      "importHelpers": true,
-      "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "noUnusedLocals": true,
-      "skipLibCheck": true,
-      "esModuleInterop": true,
-      "allowSyntheticDefaultImports": true,
-      "strict": true,
-      "resolveJsonModule": true,
-      "isolatedModules": false,
-      "noEmit": false,
-      "strictPropertyInitialization": false
+        "outDir": "build",
+        "module": "ESNext",
+        "target": "ES5",
+        "lib": [
+            "es6",
+            "dom",
+            "es2016",
+            "es2017",
+        ],
+        "sourceMap": true,
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        // "esModuleInterop": true,
+        // "isolatedModules": true,
+        "jsx": "react",
+        "declaration": true,
+        // "declarationDir": "dist",
+        // "forceConsistentCasingInFileNames": true,
+        // "noImplicitReturns": true,
+        // "noImplicitThis": true,
+        // "noImplicitAny": true,
+        // "strictNullChecks": true,
+        // "noEmit": true,
+        // "suppressImplicitAnyIndexErrors": true,
+        // "noUnusedLocals": true,
+        // "noUnusedParameters": true
     },
+    "include": [
+        "src"
+    ],
     "exclude": [
-      "node_modules/**",
-      "build",
-      "scripts",
-      "acceptance-tests",
-      "webpack",
-      "jest",
+        "node_modules",
+        "build",
+        "babel.config.js",
+        "metro.config.js",
+        "jest.config.js"
     ]
-  }
+}
