--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "servisofts-component",
-  "version": "1.10.3",
-  "description": "",
+  "version": "1.13.3",
+  "description": "App of servisofts",
   "main": "build/index.js",
   "module": "build/index.es.js",
-  "jsnext:main": "build/index.es.js",
+  "types": "build/index.d.ts",
+  "readmeFilename": "README.md",
   "files": [
-    "build"
+    "build",
+    "src"
   ],
   "scripts": {
     "build": "rollup -c",
@@ -19,26 +21,27 @@
   "author": "servisofts",
   "license": "ISC",
   "dependencies": {},
+  "peerDependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-native": "^0.64.2",
+    "react-native-web": "^0.14.8",
+    "servisofts-socket": "^1.1.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "metro-react-native-babel-preset": "^0.59.0",
+    "typescript": "^4.3.5",
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-native": "^0.64.12",
     "@types/react-test-renderer": "^17.0.1",
-    "react-scripts-ts": "^3.1.0",
-    "react-test-renderer": "^17.0.2",
+    "@types/react-is": "^17.0.2",
     "rollup": "^2.55.1",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "typescript": "^4.3.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-native-web": "^0.14.8"
+    "rollup-plugin-typescript2": "^0.30.0"
   }
 }
