--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,18 @@
 {
     "presets": [
-        "@babel/env",
-        "@babel/preset-react"
+        [
+            "@babel/env",
+            {
+                "modules": false
+            }
+        ],
+        "@babel/preset-react",
+        "module:metro-react-native-babel-preset"
+    ],
+    "extensions": [
+        ".web.js",
+        ".web.tsx",
+        ".js",
+        ".tsx"
     ]
 }
