--- a/example/package.json
+++ b/example/package.json
@@ -15,8 +15,9 @@
   "peerDependencies": {},
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/native": "^5.9.6",
+    "@react-navigation/stack": "^5.14.7",
+    "babel": "^6.23.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-native": "^0.64.2",
@@ -24,30 +25,47 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
+    "react-native-svg": "^12.1.1",
+    "babel-loader": "^8.0.2",
+    "react-native-svg-transformer": "^0.14.3",
     "react-native-web": "^0.14.8",
+    "react-redux": "^7.2.4",
+    "react-refresh": "^0.10.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "servisofts-component": "file:..",
-    "servisofts-socket": "1.2.1",
+    "servisofts-socket": "^1.2.1",
+    "servisofts-ts": "file:../../../../NPMLibrary/servisofts-ts",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-syntax-jsx": "^7.14.5",
+    "@babel/plugin-transform-typescript": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-plugin-module-resolver": "^4.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "17.0.1"
+    "react-test-renderer": "17.0.1",
+    "typescript": "^4.3.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+    "plugins": [
+      "@babel/plugin-transform-typescript",
+      "@babel/plugin-syntax-jsx"
     ]
   }
 }
